fixed return to index url

--- a/week2.html
+++ b/week2.html
@@ -745,6 +745,6 @@ mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
 \operatorname{minimize} L_{P}=\frac{1}{2}\|\mathbf{w}\|^{2}
 \text { subject to } y_{i}\left(\mathbf{w} \circ \boldsymbol{x}_{i}+b\right) \geq 1 . \quad \forall i=1, \ldots, t
 </script><span>).</span></p><p><span>The model also differs from SVM in several ways, mainly due to the shape of the gradient of the loss function:</span></p><p><img src="week2.assets/image-20220115215645304.png" referrerpolicy="no-referrer" alt="image-20220115215645304"></p><p><span>The loss function for QVC doesn&#39;t increase linearly with the error margin, which means it&#39;s most sensitive to the error around the classifying hyperplane.</span></p><p><span>Overall, the most noteworthy feature of the quantum variational classifier is its ability to efficiently map classical data to quantum and demonstrate quantum advantage at the same time. I think it&#39;s suitable to run on near-term quantum hardware and is therefore potential candidate suitable for the current project.</span></p><hr /><p><em><a href='https://github.com/leumasli/EE113D-Blog/issues/new'><span>Submit feedback</span></a></em><span> or </span><br>
-<em><a href='index.md'><span>Return to overview</span></a></em></p><p>&nbsp;</p></div></div>
+<em><a href='/EE113D-Blog/'><span>Return to overview</span></a></em></p><p>&nbsp;</p></div></div>
 </body>
 </html>
